First_pull_request_cahnge_line5

--- a/_posts/0000-01-02-Geeenji.md
+++ b/_posts/0000-01-02-Geeenji.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+How to use vi: 1.press i to enter the edition mode,an Esc to leave it,:wq save
 Use the left arrow to go back!
